--- a/src/main/resources/templates/ejemplo2.html
+++ b/src/main/resources/templates/ejemplo2.html
@@ -2,11 +2,22 @@
     <head>
         <title>TechShop</title>
         <meta charset="UTF-8"> <!-- Set caracteres, ingles, ruso-->
+        <link href="/css/estilos.css" rel="stylesheet" type="text/css"/>
     </head> <!--Encabezado html, cualquier lenguaje-->
     <body> 
-        <<h1 style="text-align: center;background-color: blue;color: white">Imagenes</h1>
+        <header>
+            <nav>
+                <a class="logo nav-link" href="/">TechShop</a> 
+                <ul class="nav-menu"> 
+                    <li class="nav-menu-item"><a class="nav-link" href="/ejemplo2">Mis Autos</a></li>
+                    <li class="nav-menu-item"><a class="nav-link" href="/multimedia">Multimedia</a></li>
+                    <li class="nav-menu-item"><a class="nav-link" href="/iframes">iFrames</a></li>
+                </ul>
+            </nav>        
+        </header>
+        <h1 style="text-align: center;background-color: blue;color: white">Imagenes</h1>
         <a href="/">TechShop</a> | <a href="ejemplo2"></a>
-        <<h2> Mis autos</h2> 
+        <h2> Mis autos</h2> 
         <img src="/img/c8zo6.jpg" width="200" alt=""/><br/>
         <img src="https://hips.hearstapps.com/hmg-prod/images/2023-mercedes-amg-gls63-exterior-101-673226ad7a7a2.jpg?crop=0.806xw:0.681xh;0.144xw,0.194xh&resize=1200:*" width="200" alt=""/>
 
