--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,13 +1,34 @@
 <html>
     <head>
         <title>TechShop</title>
-        <meta charset="UTF-8"> <!-- Set caracteres, ingles, ruso-->
-    </head> <!--Encabezado html, cualquier lenguaje-->
+        <meta charset="UTF-8"> 
+        <link href="/css/estilos.css" rel="stylesheet" type="text/css"/>
+    </head> 
     <body> 
-        <<h1 style="text-align: center;background-color: blue;color: white">TechShop</h1>
-        <a href="/">TechShop</a> | <a href="ejemplo2">Mis autos</a>   <!--Arrastro ejemplo2 de proyectos para hacer hipervinculo, el primero sera a futuro el logo con el /-->
-        <<h2> Su tienda en línea</h2> 
-        <p>Bienvenidos a la mejor tienda de cualquier producto que desee, aceptamos todo tipo de tarjetas, cero estafas y envíos a todo el país por correos de costa rica</p>
+        <header>
+            <nav>
+                <a class="logo nav-link" href="/">TechShop</a> 
+                <ul class="nav-menu"> 
+                    <li class="nav-menu-item"><a class="nav-link" href="/ejemplo2">Mis Autos</a></li>
+                    <li class="nav-menu-item"><a class="nav-link" href="/multimedia">Multimedia</a></li>
+                    <li class="nav-menu-item"><a class="nav-link" href="/iframes">iFrames</a></li>
+                </ul>
+            </nav>        
+        </header>
+
+        <aside>
+            <h2>Index</h2>
+            <p>Uso de etiquetas basicas en un sitio web</p>
+        </aside>
+        <section>
+            <h2> Su tienda en línea</h2> 
+            <p>Bienvenidos a la mejor tienda de cualquier producto que desee, aceptamos todo tipo de tarjetas, cero estafas y envíos a todo el país por correos de costa rica</p>     
+        </section>
+        <footer>
+            TechShop 2025 &COPY; Todos los derechos reservados
+        </footer>
+
+
 
 
          </body>
