--- a/src/main/resources/templates/producto/modifica.html
+++ b/src/main/resources/templates/producto/modifica.html
@@ -3,16 +3,10 @@
       xmlns:sec="http://www.thymleaf.org/thymleaf-extras-springsecurity6"> 
     
     <head th:replace="~{layout/plantilla :: head}">
-        <title>TechShop</title>
-    </head>
-    
     <body> 
         <header th:replace="~{layout/plantilla :: header}"/>
         
-        <section th:replace="~{categoria/fragmentos :: agregarCategoria}"/>
-        <section th:replace="~{categoria/fragmentos :: listado}"/>\
-        <section th:replace="~{categoria/fragmentos :: confirmarEliminar}"/>
-        <section th:replace="~{layout/plantilla :: mostrarToast}"/>
+        <section th:replace="~{producto/fragmentos :: editarProducto}"/>
      
         <footer th:replace="~{layout/plantilla :: footer}"/> 
 
