--- a/src/main/resources/templates/producto/fragmentos.html
+++ b/src/main/resources/templates/producto/fragmentos.html
@@ -1,30 +1,33 @@
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-
-
-    <head th:replace="~{layout/plantilla :: head}">
-        <title>TechShop</title>
-    </head>
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
+    <head th:replace="~{layout/plantilla :: head}"/>        
     <body>
-        <!-- Es el fragmento #1 boton y ventana modal para agregar productos -->
-
+        <!-- Es el fragmento #1 boton y venta modal para agregar productos -->
         <section th:fragment="agregarProducto">
             <div class="row py-4 mb-2 bg-light">
                 <div class="col-md-1"></div>
                 <div class="col-md-3">
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#agregarProducto">
+                    <button type="button" 
+                            class="btn btn-primary" 
+                            data-bs-toggle="modal" 
+                            data-bs-target="#agregarProducto">
                         <i class="fas fa-plus"></i> [[#{producto.agregar}]]
                     </button>
                 </div>
             </div>
 
             <!-- Modal para agregar productos -->
-            <div class="modal fade" id="agregarProducto" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" 
+                 id="agregarProducto" 
+                 tabindex="-1" 
+                 aria-labelledby="exampleModalLabel" 
+                 aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header bg-info text-white">
-                            <h1 class="modal-title fs-5" id="exampleModalLabel"> <i class="fa-solid fa-layer-group"></i> [[#{producto.agregar}]]</h1>
+                            <h1 class="modal-title fs-5" id="exampleModalLabel"><i class="fa-solid fa-layer-group"></i> [[#{producto.agregar}]]</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <form th:action="@{/producto/guardar}"
@@ -32,28 +35,56 @@
                               method="post"
                               class="was-validated"
                               enctype="multipart/form-data">
-
                             <div class="modal-body">
+                                <div class="mb-3">
+                                    <label>[[#{producto.categoria}]]</label>                                    
+                                    <select class="form-select" 
+                                            name="categoria.idCategoria"
+                                            required="true"
+                                            aria-label="Default select example">                                        
+                                        <option th:each="c : ${categorias}"
+                                                th:value="${c.idCategoria}">[[${c.descripcion}]]</option>
+                                    </select>
+                                </div>                                
+
                                 <div class="mb-3">
                                     <label>[[#{producto.descripcion}]]</label>
-                                    <input type="text" name="descripcion"
+                                    <input type="text" name="descripcion" 
                                            required="true" class="form-control"/>
-                                </div>                              
-                            </div>
-                            <div class="modal-body">
+                                </div>
+
+                                <div class="mb-3">
+                                    <label>[[#{producto.detalle}]]</label>
+                                    <textarea name="detalle" rows="5"
+                                              class="form-control"></textarea>
+                                </div>
+
+                                <div class="mb-3">
+                                    <label>[[#{producto.precio}]]</label>
+                                    <input type="number" name="precio" 
+                                           min="0"
+                                           required="true" class="form-control"/>
+                                </div>
+                                <div class="mb-3">
+                                    <label>[[#{producto.existencias}]]</label>
+                                    <input type="number" name="existencias" 
+                                           min="0"
+                                           required="true" class="form-control"/>
+                                </div>
+
                                 <div class="mb-3">
                                     <label>[[#{producto.activo}]]</label>
-                                    <input type="checkbox" name="activo"
+                                    <input type="checkbox" name="activo" 
                                            class="form-check-input"/>
                                 </div>
                                 <div class="mb-3">
                                     <label>[[#{producto.imagen}]]</label>
-                                    <input type="file" name="imagenFile"
+                                    <input type="file" name="imagenFile" 
                                            onchange="mostrarImagen(this);"
                                            class="form-control"/>
                                     <img id="blah" src="#" alt="..." height="200"/>
                                 </div>
-                            </div> 
+                            </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"><i class="fa-solid fa-xmark"></i> [[#{accion.cerrar}]]</button>
                                 <button type="submit" class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i> [[#{accion.guardar}]]</button>
@@ -62,7 +93,10 @@
                     </div>
                 </div>
             </div>
-        </section>
+
+        </section>        
+
+        <!-- Es el fragmento #3 de fragmentos... listado de productos -->
         <section th:fragment="listado" class="p-3">
             <div class="row p-3">
                 <div class="col-md-9">
@@ -77,32 +111,46 @@
                                         <tr>
                                             <th>#</th>
                                             <th>[[#{producto.descripcion}]]</th>
+                                            <th>[[#{producto.precio}]]</th>
+                                            <th>[[#{producto.existencias}]]</th>
+                                            <th>[[#{producto.total}]]</th>
+                                            <th>[[#{producto.categoria}]]</th>
                                             <th>[[#{producto.imagen}]]</th>
                                             <th>[[#{producto.activo}]]</th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr th:each="c : ${productos}">
-                                            <td>[[${c.idProducto}]]</td>
-                                            <td>[[${c.descripcion}]]</td>
+                                        <tr th:each="p : ${productos}">
+                                            <td>[[${p.idProducto}]]</td>
+                                            <td>[[${p.descripcion}]]</td>
+                                            <td>[[${p.precio}]]</td>
+                                            <td>[[${p.existencias}]]</td>
+                                            <td>[[${p.precio}*${p.existencias}]]</td>
+                                            <td>[[${p.categoria.descripcion}]]</td>
+                                            <td><img th:src="@{${p.rutaImagen}}" alt=".." height="75"/></td>
+                                            <td th:text="${p.activo} ? 'Activa' : 'Inactiva'"></td>
                                             <td>
-                                                <img th:src="@{${c.rutaImagen}}" alt=".." height="75" />
-                                            </td>
-                                            <td th:text="${c.activo} ? 'Activa' : 'Inactiva'"></td>
-                                            <td>
-                                                <button type="button"
-                                                        class="btn btn-danger"
-                                                        data-bs-toggle="modal"
-                                                        data-bs-target="#confirmModal"
-                                                        th:data-bs-id="${c.idProducto}"
-                                                        th:data-bs-descripcion="${c.descripcion}">
-                                                    <i class="fa-solid fa-trash"></i> [[#{accion.eliminar}]]
-                                                </button>
+                                                <div class="d-flex align-items-start">
+                                                    <button type="button"
+                                                            class="btn btn-danger"
+                                                            data-bs-toggle="modal" 
+                                                            data-bs-target="#confirmModal"
+                                                            th:data-bs-id="${p.idProducto}"
+                                                            th:data-bs-descripcion="${p.descripcion}">
+                                                        <i class="fa-solid fa-trash"></i> [[#{accion.eliminar}]]
+                                                    </button>
+                                                    <form method="post"
+                                                          th:action="@{/producto/modificar}"
+                                                          th:object="${producto}">
+                                                        <input type="hidden" name="idProducto"
+                                                               th:value="${p.idProducto}"/>
+                                                        <button type="submit"
+                                                                class="btn btn-success">
+                                                            <i class="fa-solid fa-pencil"></i> [[#{accion.actualizar}]]
+                                                        </button>
+                                                    </form>
+                                                </div>
 
-                                                <a class='btn btn-success'
-                                                   th:href='@{/producto/modificar/}+${c.idProducto}'>
-                                                    <i class="fa-solid fa-pen"></i> [[#{accion.actualizar}]]
-                                                </a>
                                             </td>
                                         </tr>
                                     </tbody>
@@ -114,6 +162,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
 
         <!-- 3 Fragmento que se utiliza en la página modifca.html -->
@@ -134,13 +183,7 @@
                                     <a th:href="@{/producto/listado}" class="btn btn-primary">
                                         <i class="fas fa-arrow-left"></i> [[#{accion.regresar}]]
                                     </a>
-                                </div>
-                                <div class="col-md-4 d-grid">                                
-                                    <a th:href="@{/producto/eliminar/}+${producto.idProducto}"
-                                       class="btn btn-danger">
-                                        <i class="fas fa-trash"></i> [[#{accion.eliminar}]]
-                                    </a>
-                                </div>
+                                </div>                                
                                 <div class="col-md-4 d-grid">
                                     <button type="submit" class="btn btn-success">
                                         <i class="fas fa-check"></i> [[#{accion.guardar}]]
@@ -158,11 +201,43 @@
                                             </div>
                                             <div class="card-body">
                                                 <div class="mb-3">
+                                                    <label>[[#{producto.categoria}]]</label>
+                                                    <select class="form-select" 
+                                                            name="categoria.idCategoria"
+                                                            th:field="*{categoria.idCategoria}"
+                                                            required="true"
+                                                            aria-label="Default select example">                                        
+                                                        <option th:each="c : ${categorias}"
+                                                                th:value="${c.idCategoria}">[[${c.descripcion}]]</option>
+                                                    </select>
+                                                </div>
+
+                                                <div class="mb-3">
                                                     <label for="descripcion">[[#{producto.descripcion}]]</label>
                                                     <input type="text" class="form-control" 
                                                            name="descripcion" th:field="*{descripcion}"
                                                            required="true">
                                                 </div>
+
+                                                <div class="mb-3">
+                                                    <label>[[#{producto.detalle}]]</label>
+                                                    <textarea class="form-control" rows="5"
+                                                              name="detalle" th:field="*{detalle}"></textarea>
+                                                </div>
+
+                                                <div class="mb-3">
+                                                    <label>[[#{producto.precio}]]</label>
+                                                    <input type="number" class="form-control" 
+                                                           name="precio" th:field="*{precio}"
+                                                           required="true">
+                                                </div>
+                                                <div class="mb-3">
+                                                    <label>[[#{producto.existencias}]]</label>
+                                                    <input type="number" class="form-control" 
+                                                           name="existencias" th:field="*{existencias}"
+                                                           required="true">
+                                                </div>
+
                                                 <div class="mb-3">
                                                     <label for="activo">[[#{producto.activo}]]</label>
                                                     <input class="form-check-input" 
@@ -187,7 +262,7 @@
             </div>
         </section>
 
-<section th:fragment="confirmarEliminar">
+        <section th:fragment="confirmarEliminar">
             <div class="modal fade" 
                  id="confirmModal" 
                  tabindex="-1" 
@@ -217,5 +292,6 @@
                 </div>
             </div>
         </section>
+
     </body>
 </html>
