--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,8 @@
     <body> 
         <header th:replace="~{layout/plantilla :: header}"/>
 
+        <section th:replace="~{pruebas/fragmentos :: tarjetas}"/>\
+
         <footer th:replace="~{layout/plantilla :: footer}"/>
          </body>
 </html>
