--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -79,6 +79,36 @@
                         </ul>
                         <div id="resultBlock">
                         </div>
+
+                        <ul class="navbar-nav"
+                            sec:authorize='!isAuthenticated()'>
+                            <li class='nav-item'>
+                                <a class='nav-menu-link nav-link'
+                                   th:href='@{/login}'>
+                                    <i class="fas fa-right-to-bracket"></i>
+                                </a>
+                            </li>
+                        </ul>
+                        <ul class="navbar-nav"
+                            sec:authorize='isAuthenticated()'>
+                            <li class='nav-item my-auto'>
+                                <img th:src="@{${session.imagenUsuario}}"                                      
+                                     height="40" 
+                                     class="rounded-circle"
+                                     alt=""/>
+                                <span sec:authentication='name'>Jhon</span>
+                            </li>
+                            <li class='nav-item text-white my-auto'>
+                                <form method="post" 
+                                      th:action='@{/logout}'>
+                                    <button class='btn btn-light'>
+                                        <i class="fas fa-right-from-bracket"></i> 
+                                    </button>
+                                </form>
+                            </li>
+                        </ul>
+
+
                     </div>
                 </div>
             </nav>
@@ -96,7 +126,7 @@
         <footer th:fragment="footer" class="p-2 mt-5 bg-info text-white"> <!<!-- pie -->
             <p class="lead text-center"> &COPY; [[#{plantilla.derechos}]] </p>
         </footer>
-        
+
         <section th:fragment="mostrarToast">
             <div aria-live="polite" 
                  aria-atomic="true" 
